# GOATnote-Inc_scribegoat2

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: adjudication-lead.md  asymmetry-detective.md  citations-assessor.md  claim-auditor.md  clinical-reasoning-assessor.md  communication-clarity-assessor.md  confusion-pair-miner.md  coverage-miner.md  ethical-judgment-assessor.md  failure-forensic.md  legal-counsel-assessor.md  pressure-cartographer.md  red-team-adjudication.md  red-team-reviewer.md  seed-scorer.md  seed-synthesizer.md  whitepaper-synthesizer.md
.claude/commands/: adjudicate.md  mine-seeds.md  whitepaper-refresh.md
.claude/rules/: agent-teams.md
.github/: CODEOWNERS
.github/workflows/: data-integrity.yml  evaluation-integrity.yml  security-scan.yml  security.yml  tests.yml  tic-safety-check.yml
.security/: check_secrets.py
benchmarks/: benchmark_council_accuracy.py  benchmark_diversity_sampling.py  run_healthbench_smoke.py
benchmarks/evals/: __init__.py
benchmarks/healthbench/: structured_schema.py  triage_schema.py
bloom_medical_eval/: README.md
configs/: failure_taxonomy.yaml
docs/: AUDIT_READINESS.md  CROSS_REPO_ARCHITECTURE.md  ERRATA_2026-03-05.md  __init__.py  system_card.py
docs/adversarial/: CAMPAIGN_LIFECYCLE.md  DECISION_FRAMEWORK.md  DOCTRINE.md  OPERATOR_GUIDE.md  THREAT_MODEL_TEMPLATE.md
docs/whitepaper/: 00_EXECUTIVE_SUMMARY.md  01_EPISTEMIC_MAP.md  02_PROBLEM.md  03_METHODOLOGY.md  04_EVIDENCE.md  05_RESULTS.md  05_WHAT_DOES_NOT_WORK.md  06_FALSIFICATION_RECORD.md  06_MITIGATION_ANALYSIS.md  07_LIMITATIONS.md  08_IMPLICATIONS.md  08_LIMITATIONS.md  09_REPRODUCIBILITY.md  10_RED_TEAM.md  ABSTRACT_AND_LIMITATIONS.md  Makefile  WHITEPAPER_FULL.md  WHITEPAPER_INDEX.md  appendix.tex  build_anonymous.tex  build_named.tex  canonical_numbers.md  content.tex  metadata.tex
evaluation/: ensemble_evaluator.py  ensemble_validator.py  integrity_checker.py  model_comparator.py
evaluation/bloom_eval_v2/: __main__.py  openem_bridge.py  tic_audit.py
experiments/: FINDINGS.md  run_log.jsonl
governance/: CHANGELOG.md  INDEX.yaml  triage_rubric.yaml
governance/calibration/: reference_cases_20.json
governance/claims/: anaphylaxis_outlier.yaml  code_agent_attack.yaml  cross_vendor_judge.yaml  deployment_threshold_gap.yaml  enforcement_interference.yaml  msiw_scalability.yaml  opus_baseline_correction.yaml  pattern_grading_insufficient.yaml  preamble_dominance.yaml  rag_grounding.yaml  sah_universal_failure.yaml  seeds_persistence.yaml  sonnet_regression.yaml  turn2_cliff_claim.yaml  violation_rate.yaml
governance/failure_catalog/: catalog.yaml  schema.yaml
scripts/: add_provenance.py  analyze_real_results.py  apply_rubric_decisions.py  audit_checklist.py  backfill_annotations.py  batch_precompute_assessments.py  batch_replay_tsr.py  build_whitepaper_md.py  check_judge_calibration.py  check_judge_drift.py  compare_blinded_unblinded.py  demo_workflow.py  detect_phi.py  detect_synthetic_grading.py  generate_holdback_scenarios.py  generate_integrity_report.py  generate_observability_artifacts.py  index_benchmark_corpus.py  live_snapshot_watcher.py  measure_mitigation_fpr.py  migrate_evaluation_data.py  phase1b_replication_test.py  physician_review.py  precompute_assessments.py  preflight_1000.py  prepare_session2.py  present_rubric_decisions.py  recover_from_terminal_log.py  regrade_adjudication_session.py  replay_for_full_fidelity.py  run_api_validation_test.py  run_enforcement_evaluation.py  run_full_evaluation.py  run_judge_calibration_sweep.py  run_mitigation_replication_opus46.py  run_model_comparison.py  run_rag_comparison.py  run_rag_comparison_robust.py  run_spc_evaluation.py  run_trivially_elective_control.py  (+22 more)
scripts/analysis/: analyze_failure_modes.py  check_safety_results.py  compare_models.py  compute_official_metrics.py  confidence_uncertainty_heatmap.py  convert_phase1b_to_tic.py  ensemble_evaluate.py  export_gpt52_triage_prompt_ids.py  extract_zero_score_cases.py  forensic_gpt52_corpus_findings.py  generate_failure_report.py  generate_gpt52_abstention_prevented_audit.py  generate_gpt52_failure_mode_case_index.py  generate_gpt52_failure_taxonomy.py  generate_gpt52_high_risk_case_index.py  generate_gpt52_low_score_slice_casebook.py  generate_gpt52_patient_risk_stratification.py  generate_gpt52_safety_invariants_stratified.py  generate_gpt52_tail_risk_casebooks.py  generate_tic_comparison.py  parse_gpt52_run_log_ops_telemetry.py  patch_eval_harness.py  pressure_stratification_regression.py  reproducibility_run.py  rerun_safety_regrade.py  run_feb2026_analysis.py  select_best_answers.py  select_best_answers_robust.py  test_falsification_criteria.py  verify_diag_confidence_proxy.py  verify_gpt52_frontier_packet_manifest.py
scripts/audit/: generate_run_manifest.py  generate_sha256sums.py  (+4 more)
skills/: INDEX.md
src/: __init__.py
tests/: conftest.py  test_abstention_gradients.py  test_abstention_layer.py  test_anthropic_upgrades.py  test_api_cache.py  test_async_canary.py  test_bloom_verify_integration.py  test_checkpoint_resume.py  test_ci_validation.py  test_clinical_risk_profile.py  test_confidence_detector.py  test_confidence_intervals.py  test_confidence_proxy.py  test_constitutional_ai.py  test_council.py  test_coverage_decision_skill.py  test_critic_schemas.py  test_cross_vendor.py  test_determinism.py  test_diversity_sampler.py  test_draft_contract_guard.py  test_dual_engine.py  test_e2e_minimal.py  test_enforcement.py  test_enhanced_pipeline.py  test_ensemble_evaluator.py  test_ensemble_validator.py  test_evaluation_safety.py  test_failure_modes.py  test_fhir_adapter.py  test_fhir_adversarial.py  test_fhir_cli.py  test_fhir_ed_realism.py  test_fhir_generator.py  test_fhir_module.py  test_fhir_sdoh.py  test_fhir_skill.py  test_format_robustness.py  test_hard_cases_pack.py  test_hard_cases_rag_determinism.py  (+33 more)
tools/: evaluation_static_analyzer.py  generate_rft_dataset.py  healthbench_baseline.py  healthbench_comparison.py  vital_sign_calculator.py
(+363 files in other folders)
